--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,27 @@ deploy:deploy-rnode-artifacts:
     - echo $DOCKER_PASSWORD | sudo docker login -u $DOCKER_USERNAME --password-stdin
     - sudo docker tag  coop.rchain/rnode:latest rchain/rnode:${CI_COMMIT_REF_NAME}
     - sudo docker push rchain/rnode:${CI_COMMIT_REF_NAME}
+    # build rosette 
+    - cd rosette
+    - ./build.sh
+    - cd ..
+    # build deb/rpm packages and compressed archive 
+    - sudo sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate node/rpm:packageBin node/debian:packageBin node/universal:packageZipTarball 
+    - set -eo pipefail
+    - artifacts_dir=$(mktemp -d /tmp/artifacts_out.XXXXXXXX)
+    - cp node/target/rnode_*_all.deb ${artifacts_dir}/rnode.deb
+    - cp node/target/rpm/RPMS/noarch/rnode-*.noarch.rpm ${artifacts_dir}/rnode.rpm
+    - cp rosette/build.out/rosette-*.deb ${artifacts_dir}/rosette.deb
+    # deploy artifacts to dispatcher 
+    - apt update && apt -y install openssh-client rsync
+    - mkdir -p ~/.ssh
+    - echo "${SSH_PRIVATE_KEY}" | tr -d '\r' > ~/.ssh/id_rsa
+    - chmod 600 ~/.ssh/id_rsa
+    - rsync -avrz --delete -e  "ssh -p 22 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" ${artifacts_dir}/* inbound@dispatch.pyr8.io:/home/inbound/cd/artifacts/${CI_COMMIT_REF_NAME}/
+  only:
+    - master
+    - dev
+
 
     # deb/rpm packages and compressed archive 
     - sudo sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate node/rpm:packageBin node/debian:packageBin node/universal:packageZipTarball 
