--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,17 +20,26 @@ test:integration-test-for-artifact-creation:
     - ./scripts/install_bnfc.sh
     - sudo sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate node/rpm:packageBin node/debian:packageBin node/universal:packageZipTarball 
 
+deploy:deploy-rnode-to-dockerhub:
+  stage: deploy 
+  tags:
+    - preloaded-ubuntu1804 
+  script:
+    - ./scripts/install_bnfc.sh
+    - sudo sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate node/docker:publishLocal
+    - echo $DOCKER_PASSWORD | sudo docker login -u $DOCKER_USERNAME --password-stdin
+    - sudo docker tag  coop.rchain/rnode:latest rchain/rnode:${CI_COMMIT_REF_NAME}
+    - sudo docker push rchain/rnode:${CI_COMMIT_REF_NAME} 
+  only:
+    - master
+    - dev
+
 deploy:deploy-rnode-artifacts:
   stage: deploy 
   tags:
     - preloaded-ubuntu1804 
   script:
     - ./scripts/install_bnfc.sh
-    # docker image to docker hub
-    - sudo sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate node/docker:publishLocal
-    - echo $DOCKER_PASSWORD | sudo docker login -u $DOCKER_USERNAME --password-stdin
-    - sudo docker tag  coop.rchain/rnode:latest rchain/rnode:${CI_COMMIT_REF_NAME}
-    - sudo docker push rchain/rnode:${CI_COMMIT_REF_NAME}
     # build rosette 
     - cd rosette
     - ./build.sh
