--- a/docker/node/prometheus/prometheus.yml
+++ b/docker/node/prometheus/prometheus.yml
@@ -14,10 +14,8 @@ rule_files:
 scrape_configs:
 
   - job_name: 'prometheus-server'
-
     scrape_interval: 10s
     scrape_timeout: 5s
-
     static_configs:
       - targets: ['localhost:9090']
 
@@ -28,11 +26,10 @@ scrape_configs:
 
     static_configs:
       - targets: ['prometheus-pushgateway:9091']
-  
-  - job_name: 'rchain-node'
 
+  - job_name: 'rchain-node'
+    metrics_path: "/"
     scrape_interval: 10s
     scrape_timeout: 5s
-
     static_configs:
       - targets: ['rchain-node:9095']
