--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ test:integration-test-for-p2p-network:
     - ./scripts/install_bnfc.sh
     - sudo sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate node/docker:publishLocal
     - sudo python3.6 -m pip install argparse docker pexpect requests
-    - sudo ./scripts/p2p-test-tool.py -b -p 2 -t -T network_sockets count eval repl errors RuntimeException # leaving propose test off until integration tests pass 
+    - sudo ./scripts/p2p-test-tool.py -b -t -p 2 -m 1024m
 
 test:integration-test-for-artifact-creation:
   stage: test 
