--- a/integration-testing/pytest.ini
+++ b/integration-testing/pytest.ini
@@ -1,6 +1,8 @@
 
 [pytest]
 # see https://docs.pytest.org/en/latest/logging.html for all details
-log_cli=false
+log_cli=true
 log_cli_level=info
+;log_format = %(asctime)s %(levelname)s %(message)s
+log_format = [%(filename)s:%(lineno)d] %(asctime)s %(levelname)s %(message)s
 ;log_cli_level=debug
