--- a/integration-testing/pytest.ini
+++ b/integration-testing/pytest.ini
@@ -4,5 +4,5 @@
 log_cli=true
 log_cli_level=info
 ;log_format = %(asctime)s %(levelname)s %(message)s
-log_format = [%(filename)s:%(lineno)d] %(asctime)s %(levelname)s %(message)s
+log_format = [%(filename)10s:%(lineno)3d] %(asctime)s %(levelname)s %(message)s
 ;log_cli_level=debug
