disable caching to see if it helps with some issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,11 +30,12 @@ before_cache:
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -type f -delete
 
 cache:
-  timeout: 360 # default is 180 
-  directories:
-    - "$HOME/.ivy2/cache"
-    - "$HOME/.sbt"
-    - "$HOME/.coursier"
+  false
+  # timeout: 360 # default is 180 
+  # directories:
+  #   - "$HOME/.ivy2/cache"
+  #   - "$HOME/.sbt"
+  #   - "$HOME/.coursier"
 
 after_success:
   - "./scripts/create-artifacts.sh"
