Don't exclude build.sbt from scalafmt
Also delete a duplicate config entry.

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,9 +1,8 @@
 project {
   git = true
-  excludeFilters = ["target/", "build.sbt"]
+  excludeFilters = ["target/"]
 }
 style = default
 rewrite.rules = [PreferCurlyFors, RedundantBraces, SortImports]
-maxColumn = 98
 align = most
 maxColumn = 100
