--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ matrix:
   - language: nix
     env: SUBPROJECT=rosette
   - language: scala
-    env: SUBPROJECT=core
+    env:
+      - SUBPROJECT=core
     scala: 2.12.4
     sbt_args: -no-colors
     install:
