Test if env prop is set properly.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ test:integration-test-for-p2p-network:
     - ./scripts/install_bnfc.sh
     - sudo sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate casper/test:compile node/docker:publishLocal
     - sudo python3.6 -m pip install argparse docker pexpect requests
+    - echo "TEST ${PRETTY_PRINTER_OUTPUT_TRIM_AFTER}"
     - sudo ./scripts/p2p-test-tool.py -b -t -p 2 -m 2048m
   except:
     - testing
