--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ test:integration-test-for-p2p-network-java10:
   script:
     - java -version
     - ./scripts/install_bnfc.sh
-    - sudo sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate casper/test:compile node/docker:publishLocal
+    - sudo DOCKER_BASE_IMAGE=openjdk:11-jre-slim sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate casper/test:compile node/docker:publishLocal
     - sudo python3.6 -m pip install argparse docker pexpect requests
     - sudo ./scripts/p2p-test-tool.py -b -t -p 2 -m 2048m
   only:
@@ -52,10 +52,9 @@ test:integration-test-for-artifact-creation-java10:
   script:
     - java -version
     - ./scripts/install_bnfc.sh
-    - sudo sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate casper/test:compile node/rpm:packageBin node/debian:packageBin node/universal:packageZipTarball 
-  only:
-    - master
-    - dev
+    - sudo DEBIAN_JRE_PKG="openjdk-11-jre-headless" sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate casper/test:compile node/rpm:packageBin node/debian:packageBin node/universal:packageZipTarball
+  except:
+    - testing
 
 
 deploy:deploy-rnode-to-dockerhub:
@@ -89,7 +88,7 @@ deploy:deploy-rnode-to-dockerhub-java10:
   script:
     - java -version
     - ./scripts/install_bnfc.sh
-    - sudo sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate casper/test:compile node/docker:publishLocal
+    - sudo DOCKER_BASE_IMAGE=openjdk:11-jre-slim sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate casper/test:compile node/docker:publishLocal
     - echo $DOCKER_PASSWORD | sudo docker login -u $DOCKER_USERNAME --password-stdin
     - sudo docker tag coop.rchain/rnode:latest rchain/rnode:${CI_COMMIT_REF_NAME}-java10
     - sudo docker push rchain/rnode:${CI_COMMIT_REF_NAME}-java10
@@ -149,7 +148,7 @@ deploy:deploy-rnode-artifacts-java10:
     - ./build.sh
     - cd ..
     # build deb/rpm packages and compressed archive
-    - sudo sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate casper/test:compile node/rpm:packageBin node/debian:packageBin node/universal:packageZipTarball 
+    - sudo DEBIAN_JRE_PKG="openjdk-11-jre-headless" sbt -Dsbt.log.noformat=true clean rholang/bnfc:generate casper/test:compile node/rpm:packageBin node/debian:packageBin node/universal:packageZipTarball 
     - set -eo pipefail
     - artifacts_dir=$(mktemp -d /tmp/artifacts_out.XXXXXXXX)
     - cp node/target/rnode_*_all.deb ${artifacts_dir}/
