Switch over to Java 10/11
Why Java 10 is called openjdk-11 in Ubuntu 18.04:
https://lists.ubuntu.com/archives/ubuntu-release/2018-February/004275.html

--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,7 @@ branches:
 # additional volumes, as in package step, you need to specify all volumes.
 
 __buildenv: &buildenv
-  image: rchain/buildenv:latest-java8
+  image: rchain/buildenv:latest
 
 __sbtenv: &sbtenv
   <<: *buildenv
