--- a/.drone.yml
+++ b/.drone.yml
@@ -68,7 +68,7 @@ pipeline:
   run-integration-tests:
     <<: *buildenv
     commands:
-      - ./scripts/ci/run-integration-tests.sh
+      - ./scripts/ci/run-p2p-test
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp:/tmp
