Store container logs in a non-ephemeral location

--- a/.drone.yml
+++ b/.drone.yml
@@ -79,6 +79,7 @@ pipeline:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp:/tmp
+      - /var/tmp/rchain-it:/var/tmp/rchain-it
     when:
       event: [ push, tag ]
 
