Increase max heap size

--- a/.drone.yml
+++ b/.drone.yml
@@ -75,7 +75,7 @@ pipeline:
   run-integration-tests:
     <<: *buildenv
     environment:
-      - _JAVA_OPTIONS=-Xms2G -Xmx4G -XX:MaxMetaspaceSize=1G
+      - _JAVA_OPTIONS=-Xms2G -Xmx8G
     commands:
       - ./scripts/ci/run-integration-tests.sh
     volumes:
