Enable logging on CI

--- a/integration-testing/pytest.ini
+++ b/integration-testing/pytest.ini
@@ -1,7 +1,7 @@
 
 [pytest]
 # see https://docs.pytest.org/en/latest/logging.html for all details
-log_cli=false
+log_cli=true
 log_cli_level=info
 log_cli_format = %(asctime)s %(levelname)s %(message)s
 log_file=logs/integration-testing.log
