--- a/integration-testing/pytest.ini
+++ b/integration-testing/pytest.ini
@@ -3,6 +3,6 @@
 log_cli=true
 log_cli_level=info
 log_cli_format = %(asctime)s %(message)s
-log_file=logs/integration-testing.log
+# log_file=logs/integration-testing.log
 log_file_level=info
 log_file_format = [%(filename)10s:%(lineno)3d] %(asctime)s %(message)s
