introduce mypy test

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ node-client/ve
 research/sharding/ve
 *.pyc
 integration-testing/.pytest_cache
+integration-testing/.mypy_cache
 integration-testing/.virtualenv
 integration-testing.log
 *.log
