--- a/integration-testing/mypy.ini
+++ b/integration-testing/mypy.ini
@@ -6,3 +6,6 @@ ignore_missing_imports = True
 
 [mypy-delayed_assert.*]
 ignore_missing_imports = True
+
+[mypy-_pytest.*]
+ignore_missing_imports = True
