--- a/bors.toml
+++ b/bors.toml
@@ -8,6 +8,6 @@ status = [
 required_approvals = 1
 
 # Number of seconds from when a merge commit is created to when its statuses must pass.
-timeout_sec = 7200
+timeout_sec = 10800 #3h
 
 delete_merged_branches = true
