--- a/bors.toml
+++ b/bors.toml
@@ -10,4 +10,7 @@ required_approvals = 1
 # Number of seconds from when a merge commit is created to when its statuses must pass.
 timeout_sec = 10800 #3h
 
+# A marker in the PR description that indicates boilerplate that does not belong in the merge-commit message.
+cut_body_after = "## Overview"
+
 delete_merged_branches = true
