--- a/.drone.yml
+++ b/.drone.yml
@@ -53,11 +53,13 @@ pipeline:
       - sbt rholang/bnfc:generate compile test:compile it:compile doc
 
   run-unit-tests:
+    group: parallel
     <<: *sbtenv
     commands:
       - sbt test it:test
 
   run-code-analysis:
+    group: parallel
     <<: *sbtenv
     commands:
       - sbt scalafmtCheck coverage
@@ -66,6 +68,7 @@ pipeline:
   # push
 
   package:
+    group: parallel
     <<: *sbtenv
     commands:
       - sbt node/docker:publishLocal node/debian:packageBin node/universal:packageZipTarball
@@ -79,6 +82,7 @@ pipeline:
       event: [ push, tag ]
 
   run-integration-tests:
+    group: parallel
     <<: *buildenv
     environment:
       - _JAVA_OPTIONS=-Xms2G -Xmx4G
