Revamp the build

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,7 +19,7 @@ __buildenv: &buildenv
 __sbtenv: &sbtenv
   <<: *buildenv
   environment:
-    - _JAVA_OPTIONS=-Xms2G -Xmx4G -XX:MaxMetaspaceSize=1G
+    - _JAVA_OPTIONS=-Xms2G -Xmx4G -XX:MaxMetaspaceSize=1G -Dsbt.task.timings=true -Dsbt.task.timings.threshold=2000
   volumes:
     - /var/cache/rchain-build/.sbt:/root/.sbt
     - /var/cache/rchain-build/.ivy2:/root/.ivy2
@@ -47,16 +47,18 @@ pipeline:
     commands:
       - sbt update
 
-  compile:
+  build:
     <<: *sbtenv
     commands:
-      - sbt rholang/bnfc:generate compile test:compile it:compile doc
+      - sbt rholang/bnfc:generate compile node/docker:publishLocal
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
   run-unit-tests:
     group: parallel
     <<: *sbtenv
     commands:
-      - sbt test it:test
+      - sbt test:compile it:compile test it:test
 
   run-code-analysis:
     group: parallel
@@ -71,13 +73,14 @@ pipeline:
     group: parallel
     <<: *sbtenv
     commands:
-      - sbt node/docker:publishLocal node/debian:packageBin node/universal:packageZipTarball
+      - sbt node/debian:packageBin node/universal:packageZipTarball
       - mkdir -p artifacts
       - cp node/target/rnode_*_all.deb node/target/universal/*.tgz artifacts/
+      - env JAVAC_VERSION=1.8 sbt clean compile doc node/rpm:packageBin
+      - cp node/target/rpm/RPMS/noarch/rnode-*.noarch.rpm artifacts/
     volumes:
       - /var/cache/rchain-build/.sbt:/root/.sbt
       - /var/cache/rchain-build/.ivy2:/root/.ivy2
-      - /var/run/docker.sock:/var/run/docker.sock
     when:
       event: [ push, tag ]
 
@@ -92,18 +95,6 @@ pipeline:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp:/tmp
       - /var/tmp/rchain-it:/var/tmp/rchain-it
-    when:
-      event: [ push, tag ]
-
-  package-rpm:
-    <<: *sbtenv
-    commands:
-      - env JAVAC_VERSION=1.8 sbt clean compile doc node/rpm:packageBin
-      - mkdir -p artifacts
-      - cp node/target/rpm/RPMS/noarch/rnode-*.noarch.rpm artifacts/
-    volumes:
-      - /var/cache/rchain-build/.sbt:/root/.sbt
-      - /var/cache/rchain-build/.ivy2:/root/.ivy2
     when:
       event: [ push, tag ]
 
