--- a/integration-tests/pytest.ini
+++ b/integration-tests/pytest.ini
@@ -3,8 +3,8 @@
 log_cli=true
 log_cli_level=info
 log_cli_format = %(message)s
-# log_file=logs/integration-tests.log
-log_file_level=info
+log_file=integration-tests.log
+log_file_level=debug
 log_file_format = %(message)s
 json_report=report.json
 jsonapi=anything
