Meld `update` step into `compile` to save on sbt and step startup times

--- a/.drone.yml
+++ b/.drone.yml
@@ -43,15 +43,10 @@ pipeline:
 
   # pr
 
-  sbt-update:
-    <<: *sbtenv
-    commands:
-      - sbt update
-
   compile:
     <<: *sbtenv
     commands:
-      - sbt rholang/bnfc:generate compile
+      - sbt update rholang/bnfc:generate compile
 
   run-unit-tests:
     <<: *sbtenv
