Remove scalafmtCheck as it's been ineffective due to scalafmtOnCompile
We had `scalafmtOnCompile := true` before this PR, which means any
non-formatted code would be formatted before we got to this check.

I'm disabling it to maintain the status quo (just making it explicit).
I'll open a ticket for reintroducing formatting checks, and - firstly -
automatic reformatting in a commit hook.

--- a/.drone.yml
+++ b/.drone.yml
@@ -74,7 +74,7 @@ pipeline:
     group: parallel
     <<: *sbtenv
     commands:
-      - sbt scalafmtCheck coverage
+      - sbt coverage
       - ./scripts/ci/codecov-upload
 
   # push
