Only notify about failures of `master`, `release*` and 'testing*'
Failures in `staging` are irrelevant, as they never get to `dev`.

--- a/.drone.yml
+++ b/.drone.yml
@@ -130,5 +130,5 @@ pipeline:
       - email_sender
     when:
       event: [ push, tag ]
-      branch: *branches
+      branch: [ master, release*, testing* ]
       status: [ changed, failure ]
