Invoke mypy outside of pytest
Turns out some of the type-checks aren't performed when run inside
pytest.  Things like cross-module type-checking.  Simply Any type was
assumed.

--- a/integration-tests/mypy.ini
+++ b/integration-tests/mypy.ini
@@ -1,11 +1,3 @@
-[mypy-pytest.*]
-ignore_missing_imports = True
-
-[mypy-docker.*]
-ignore_missing_imports = True
-
-[mypy-delayed_assert.*]
-ignore_missing_imports = True
-
-[mypy-_pytest.*]
+[mypy]
+warn_unused_configs = True
 ignore_missing_imports = True
